--- a/index.html
+++ b/index.html
@@ -82,6 +82,46 @@
             <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
  </section>
+ <section class="resume">
+    <h3 class="section-title">A summary of my resume</h3>
+    <div class="resume-container">
+    <!--.resume-column*2>h3.resume-column-title.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+    <div class="resume-column">
+        <h3 class="resume-column-title experience">My education</h3>
+            <h4 class="experience-title">Master in computer engineering</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experience-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+        <h3 class="resume-column-title experience">Master in Computer Engineering</h3>
+            <h4 class="experience-title">Harvard University / 2015 - 2017</h4>
+            <h5 class="experience-sub-title"></h5>
+            <div class="experience-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+        <h3 class="resume-column-title experience">
+            <h4 class="experience-title"></h4>
+            <h5 class="experience-sub-title"></h5>
+            <div class="experience-description"></div>
+        </h3>
+    </div>
+    <div class="resume-column">
+        <h3 class="resume-column-title experience">
+            <h4 class="experience-title"></h4>
+            <h5 class="experience-sub-title"></h5>
+            <div class="experience-description"></div>
+        </h3>
+        <h3 class="resume-column-title experience">
+            <h4 class="experience-title"></h4>
+            <h5 class="experience-sub-title"></h5>
+            <div class="experience-description"></div>
+        </h3>
+        <h3 class="resume-column-title experience">
+            <h4 class="experience-title"></h4>
+            <h5 class="experience-sub-title"></h5>
+            <div class="experience-description"></div>
+        </h3>
+    </div>
+    </div>
+ </section>
     </main>
     <footer>
 
