--- a/index.html
+++ b/index.html
@@ -84,44 +84,48 @@
  </section>
  <section class="resume">
     <h3 class="section-title">A summary of my resume</h3>
-    <div class="resume-container">
+  <div class="resume-container">
     <!--.resume-column*2>h3.resume-column-title.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
     <div class="resume-column">
-        <h3 class="resume-column-title experience">My education</h3>
+        <h3 class="resume-column-title-experience">My education</h3>
             <h4 class="experience-title">Master in computer engineering</h4>
             <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-            <div class="experience-description">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
-        <h3 class="resume-column-title experience">Master in Computer Engineering</h3>
-            <h4 class="experience-title">Harvard University / 2015 - 2017</h4>
-            <h5 class="experience-sub-title"></h5>
-            <div class="experience-description">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
-        <h3 class="resume-column-title experience">
-            <h4 class="experience-title"></h4>
-            <h5 class="experience-sub-title"></h5>
-            <div class="experience-description"></div>
-        </h3>
+            <div class="experience-description">List skill/technologies here. You can change the icon above <br>
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean <br>commodo ligula eget dolor.</div>
+                <hr>
+            <h4 class="experience-title">Master in computer engineering</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experience-description">List skill/technologies here. You can change the icon above <br>
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</div>
+                <hr>
+            <h4 class="experience-title">Master in computer engineering</h4>
+            <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experience-description">List skill/technologies here. You can change the icon above <br> 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean <br>commodo ligula eget dolor.</div>
+        
     </div>
-    <div class="resume-column">
-        <h3 class="resume-column-title experience">
-            <h4 class="experience-title"></h4>
-            <h5 class="experience-sub-title"></h5>
-            <div class="experience-description"></div>
-        </h3>
-        <h3 class="resume-column-title experience">
-            <h4 class="experience-title"></h4>
-            <h5 class="experience-sub-title"></h5>
-            <div class="experience-description"></div>
-        </h3>
-        <h3 class="resume-column-title experience">
-            <h4 class="experience-title"></h4>
-            <h5 class="experience-sub-title"></h5>
-            <div class="experience-description"></div>
-        </h3>
-    </div>
-    </div>
- </section>
+   <div class="working">
+    <h3 class="my-experience">My Experience</h3>
+     <h4 class="sr-font">Sr. Font End Developer</h4>
+     <h3 class="inc">Apple Inc / 2020 - Current</h3>
+    <div class="list-skill">List skill/technologies here. You can change the icon above <br>
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</div>
+        <hr>
+        <h4 class="sr-font">Jr. Font End Developer</h4>
+        <h3 class="inc">Dribbble Inc / 2018 - 2022</h3>
+    <div class="list-skill">List skill/technologies here. You can change the icon above <br>
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</div>
+        <hr>
+        <h4 class="sr-font">HTML Developer</h4>
+        <h3 class="inc">Adobe Inc / 2017 - 2018</h3>
+        <div class="list-skill">List skill/technologies here. You can change the icon above <br>
+         to any of the 1500+ FontAwesome 5 free icons available. Aenean <br> commodo ligula eget dolor.</div>
+    </div>  
+  </div>  
+  <div class="text-center resume-download-cv">
+    <button class="btn-primary">Download CV</button>
+  </div>
+</section>
     </main>
     <footer>
 
